--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.minyiyang.finalproject">
 
+    <supports-screens android:requiresSmallestWidthDp="600" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,10 +23,7 @@
         <activity android:name=".EditeNumQuest" />
         <activity android:name=".EditeTFQuest" />
         <activity android:name=".ShowQuest" />
-        <activity android:name=".ShowDetail"></activity>
-
-
+        <activity android:name=".DialogStatistics"></activity>
     </application>
-    <supports-screens android:requiresSmallestWidthDp="600" />
 
 </manifest>
