--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.minyiyang.finalproject">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <supports-screens android:requiresSmallestWidthDp="600" />
 
     <application
@@ -11,19 +11,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="standard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListQuestions" />
+        <activity android:name=".ListQuestions"
+            android:launchMode="standard"
+            />
         <activity android:name=".EditeMultiQuest" />
         <activity android:name=".EditeNumQuest" />
         <activity android:name=".EditeTFQuest" />
         <activity android:name=".ShowQuest" />
         <activity android:name=".DialogStatistics"></activity>
+        <activity android:name=".AsyncTask"></activity>
+
     </application>
 
 </manifest>
